# activity-bus

./: ACTIVITIES.md  PLAN.md  README.md  SPEC.md  bun.lockb  conftest.py  main.py  package.json  pyproject.toml  pytest.ini  test.ts
activity_bus/: __init__.py  behaviors.py  bus.py  effects.py  errors.py  registry.py  rules.py
activity_bus/standard/: __init__.py  notes.py
examples/: effects.py  run_example.py
examples/rules/: basic_rules.yaml
src/: builtins.ts  extensions.ts  index.ts  model.ts  rules.ts  storage.ts  validation.ts
tests/: __init__.py  content-creation.test.ts  test_behaviors.py  test_bus.py  test_effects.py  test_errors.py  test_integration.py  test_notes.py  test_registry.py  test_rules.py
