[project]
name = "activity-bus"
version = "0.1.0"
description = "A Python library for processing Activity Streams 2.0 activities via a rule-based engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "nanoid",
    "asyncio",
    "activity-store",
    "uv>=0.7.4",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.5",
    "ruff>=0.11.10",
]

[project.urls]
Homepage = "https://github.com/DeadWisdom/activity-bus"
Issues = "https://github.com/DeadWisdom/activity-bus/issues"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP", "RUF"]

[tool.uv.sources]
activity-store = { git = "https://github.com/DeadWisdom/activity-store.git" }
# Disabled for now: ANN, PL
